@@ -565,130 +565,6 @@ Example: resample=44100:0:0,volnorm</string>
         </widget>
        </item>
        <item>
-        <widget class="QGroupBox" name="groupBox" >
-         <property name="title" >
-          <string>Proxy</string>
-         </property>
-         <layout class="QVBoxLayout" >
-          <item>
-           <widget class="QLabel" name="label" >
-            <property name="text" >
-             <string>You can set a proxy for internet connections (currently only used for subtitle downloading).</string>
-            </property>
-            <property name="wordWrap" >
-             <bool>true</bool>
-            </property>
-           </widget>
-          </item>
-          <item>
-           <widget class="QCheckBox" name="use_proxy_check" >
-            <property name="text" >
-             <string>&amp;Enable proxy</string>
-            </property>
-           </widget>
-          </item>
-          <item>
-           <widget class="QWidget" native="1" name="proxy_container" >
-            <property name="enabled" >
-             <bool>false</bool>
-            </property>
-            <layout class="QGridLayout" >
-             <item row="0" column="0" >
-              <widget class="QLabel" name="label_2" >
-               <property name="text" >
-                <string>&amp;Host:</string>
-               </property>
-               <property name="buddy" >
-                <cstring>proxy_hostname_edit</cstring>
-               </property>
-              </widget>
-             </item>
-             <item row="0" column="1" colspan="2" >
-              <widget class="QLineEdit" name="proxy_hostname_edit" />
-             </item>
-             <item row="0" column="3" >
-              <widget class="QLabel" name="label_3" >
-               <property name="text" >
-                <string>&amp;Port:</string>
-               </property>
-               <property name="alignment" >
-                <set>Qt::AlignRight|Qt::AlignTrailing|Qt::AlignVCenter</set>
-               </property>
-               <property name="buddy" >
-                <cstring>proxy_port_spin</cstring>
-               </property>
-              </widget>
-             </item>
-             <item row="0" column="4" >
-              <widget class="QSpinBox" name="proxy_port_spin" >
-               <property name="maximum" >
-                <number>65535</number>
-               </property>
-              </widget>
-             </item>
-             <item row="1" column="0" >
-              <widget class="QLabel" name="label_4" >
-               <property name="text" >
-                <string>&amp;Username:</string>
-               </property>
-               <property name="buddy" >
-                <cstring>proxy_username_edit</cstring>
-               </property>
-              </widget>
-             </item>
-             <item row="1" column="1" colspan="4" >
-              <widget class="QLineEdit" name="proxy_username_edit" />
-             </item>
-             <item row="2" column="0" >
-              <widget class="QLabel" name="label_5" >
-               <property name="text" >
-                <string>Pa&amp;ssword:</string>
-               </property>
-               <property name="buddy" >
-                <cstring>proxy_password_edit</cstring>
-               </property>
-              </widget>
-             </item>
-             <item row="2" column="1" colspan="4" >
-              <widget class="QLineEdit" name="proxy_password_edit" >
-               <property name="echoMode" >
-                <enum>QLineEdit::Password</enum>
-               </property>
-              </widget>
-             </item>
-             <item row="3" column="0" >
-              <widget class="QLabel" name="label_6" >
-               <property name="text" >
-                <string>&amp;Type:</string>
-               </property>
-               <property name="buddy" >
-                <cstring>proxy_type_combo</cstring>
-               </property>
-              </widget>
-             </item>
-             <item row="3" column="1" >
-              <widget class="QComboBox" name="proxy_type_combo" />
-             </item>
-             <item row="3" column="2" colspan="3" >
-              <spacer>
-               <property name="orientation" >
-                <enum>Qt::Horizontal</enum>
-               </property>
-               <property name="sizeHint" >
-                <size>
-                 <width>261</width>
-                 <height>20</height>
-                </size>
-               </property>
-              </spacer>
-             </item>
-            </layout>
-           </widget>
-          </item>
-         </layout>
-        </widget>
-       </item>
-       <item>
         <spacer>
          <property name="orientation" >
           <enum>Qt::Vertical</enum>
@@ -843,12 +719,6 @@ Example: resample=44100:0:0,volnorm</string>
   <tabstop>mplayer_afilters_edit</tabstop>
   <tabstop>ipv4_button</tabstop>
   <tabstop>ipv6_button</tabstop>
-  <tabstop>use_proxy_check</tabstop>
-  <tabstop>proxy_hostname_edit</tabstop>
-  <tabstop>proxy_port_spin</tabstop>
-  <tabstop>proxy_username_edit</tabstop>
-  <tabstop>proxy_password_edit</tabstop>
-  <tabstop>proxy_type_combo</tabstop>
   <tabstop>log_smplayer_check</tabstop>
   <tabstop>log_mplayer_check</tabstop>
   <tabstop>log_mplayer_save_check</tabstop>
@@ -870,22 +740,6 @@ Example: resample=44100:0:0,volnorm</string>
     <hint type="destinationlabel" >
      <x>249</x>
      <y>212</y>
-    </hint>
-   </hints>
-  </connection>
-  <connection>
-   <sender>use_proxy_check</sender>
-   <signal>toggled(bool)</signal>
-   <receiver>proxy_container</receiver>
-   <slot>setEnabled(bool)</slot>
-   <hints>
-    <hint type="sourcelabel" >
-     <x>239</x>
-     <y>90</y>
-    </hint>
-    <hint type="destinationlabel" >
-     <x>239</x>
-     <y>179</y>
     </hint>
    </hints>
   </connection>
