@@ -28,7 +28,6 @@
 #include <QRegExp>
 #include <QDir>
 #include <QLocale>
-#include <QNetworkProxy>
 
 using namespace Global;
 
@@ -402,18 +401,6 @@ void Preferences::reset() {
 #endif
 
 
-    /* *****
-       Proxy
-       ***** */
-
-	use_proxy = false;
-	proxy_type = QNetworkProxy::HttpProxy;
-	proxy_host = "";
-	proxy_port = 0;
-	proxy_username = "";
-	proxy_password = "";
-
-
     /* *******
        History
        ******* */
@@ -766,20 +753,6 @@ void Preferences::save() {
 	set->setValue("bypass_window_manager", bypass_window_manager);
 #endif
 	set->endGroup(); // floating_control
-
-
-    /* *****
-       Proxy
-       ***** */
-
-	set->beginGroup("proxy");
-	set->setValue("use_proxy", use_proxy);
-	set->setValue("proxy_type", proxy_type);
-	set->setValue("host", proxy_host);
-	set->setValue("port", proxy_port);
-	set->setValue("username", proxy_username);
-	set->setValue("password", proxy_password);
-	set->endGroup(); // proxy
 
 
     /* *******
@@ -1143,20 +1116,6 @@ void Preferences::load() {
 	bypass_window_manager = set->value("bypass_window_manager", bypass_window_manager).toBool();
 #endif
 	set->endGroup(); // floating_control
-
-
-    /* *****
-       Proxy
-       ***** */
-
-	set->beginGroup("proxy");
-	use_proxy = set->value("use_proxy", use_proxy).toBool();
-	proxy_type = set->value("proxy_type", proxy_type).toInt();
-	proxy_host = set->value("host", proxy_host).toString();
-	proxy_port = set->value("port", proxy_port).toInt();
-	proxy_username = set->value("username", proxy_username).toString();
-	proxy_password = set->value("password", proxy_password).toString();
-	set->endGroup(); // proxy
 
 
     /* *******
