@@ -400,18 +400,6 @@ public:
 #endif
 
 
-    /* *****
-       Proxy
-       ***** */
-
-	bool use_proxy;
-	int proxy_type;
-	QString proxy_host;
-	int proxy_port;
-	QString proxy_username;
-	QString proxy_password;
-
-
     /* *******
        History
        ******* */
